--- a/Dolacna.Webpage/wwwroot/index.html
+++ b/Dolacna.Webpage/wwwroot/index.html
@@ -5,6 +5,6 @@
     <title>Tu bude stranka</title>
 </head>
 <body>
-Test ci sa stranka deployuje
+Test ci sa stranka deployuje z github action
 </body>
 </html>
