test: is autodeploy working also when entra github-actions does not have any classic secret ?

--- a/Dolacna.Webpage/wwwroot/index.html
+++ b/Dolacna.Webpage/wwwroot/index.html
@@ -5,6 +5,6 @@
     <title>Tu bude stranka</title>
 </head>
 <body>
-Test ci sa stranka deployuje z github action
+Skuska ci to ide aj bez klasickeho secretu
 </body>
 </html>
