--- a/Dolacna.Webpage/ClientApps/webpage/index.html
+++ b/Dolacna.Webpage/ClientApps/webpage/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>usetri.sk</title>
+    <title>Ušetri Slovensko</title>
     <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="usetrislovensko.sk" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Ušetri Slovensko" />
+    <meta property="og:description" content="usetrislovensko" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      content="/public/logo.png"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
