--- a/Dolacna.Webpage/ClientApps/webpage/index.html
+++ b/Dolacna.Webpage/ClientApps/webpage/index.html
@@ -12,14 +12,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="/public/logo.png"
-    />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      content="Dolacna.Webpage\ClientApps\webpage\public\images\logo.png"
     />
   </head>
 
